// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows providing a custom display name for debugging 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`allows providing a custom display name for debugging 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`allows providing defaultProps 1`] = `
<View
  bar="baz"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component with combined static and dynamic styles 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 0,
    }
  }
/>
`;

exports[`creates a styled component with combined static and dynamic styles 2`] = `
<View
  padded={true}
  style={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 1`] = `
<View
  style={
    Object {
      "padding": 0,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 2`] = `
<View
  padded={true}
  style={
    Object {
      "padding": 10,
    }
  }
/>
`;

exports[`creates a styled component with empty styles 1`] = `
<View
  style={Object {}}
/>
`;

exports[`creates a styled component with multiple style objects 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`extends styles with extend() 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontSize": 20,
    }
  }
/>
`;

exports[`extends styles with extend() 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends styles with extend() 3`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends styles with styled(StyledComponent) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontSize": 20,
    }
  }
/>
`;

exports[`extends styles with styled(StyledComponent) 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends styles with styled(StyledComponent) 3`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`forwards ref to wrapped component 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "margin": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
/>
`;

exports[`forwards ref to wrapped component 2`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "margin": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
/>
`;

exports[`forwards ref to wrapped component 3`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "margin": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
/>
`;

exports[`keeps custom display name when extended 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`keeps custom display name when extended 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`later styles have higher priority 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
    }
  }
/>
`;
